Bug 113561 - handle tiling of images where the frame is smaller than the container.  r=pavlov, sr=bryner