gfx/public/nsIImage.h
@@ -209,6 +209,7 @@ public:
   NS_IMETHOD DrawTile(nsIRenderingContext &aContext,
                       nsDrawingSurface aSurface,
                       PRInt32 aSXOffset, PRInt32 aSYOffset,
+                      PRInt32 aPadX, PRInt32 aPadY,
                       const nsRect &aTileRect) = 0;
 
   /**
