gfx/src/mac/nsImageMac.h
@@ -82,6 +82,7 @@ public:
   NS_IMETHOD          DrawTile(nsIRenderingContext &aContext,
                               nsDrawingSurface aSurface,
                               PRInt32 aSXOffset, PRInt32 aSYOffset,
+                              PRInt32 aPadX, PRInt32 aPadY,
                               const nsRect &aTileRect);
 
 
@@ -130,6 +131,7 @@ protected:
   nsresult          SlowTile(nsIRenderingContext &aContext,
                                         nsDrawingSurface aSurface,
                                         PRInt32 aSXOffset, PRInt32 aSYOffset,
+                                        PRInt32 aPadX, PRInt32 aPadY,
                                         const nsRect &aTileRect);
                     
   nsresult          DrawTileQuickly(nsIRenderingContext &aContext,
