gfx/src/os2/nsImageOS2.h
@@ -73,6 +73,7 @@ public:
   NS_IMETHOD DrawTile(nsIRenderingContext &aContext,
                       nsDrawingSurface aSurface,
                       PRInt32 aSXOffset, PRInt32 aSYOffset,
+		      PRInt32 aPadX, PRInt32 aPadY,
                       const nsRect &aTileRect);
 
   NS_IMETHOD DrawToImage(nsIImage* aDstImage, nscoord aDX, nscoord aDY,
